--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-/* 스크롤바 숨기기 */
+/* hide scrollbar for IE, Edge and Firefox */
 * {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
 }
 
+/* hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera */
+  display: none; 
 }
