--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #1e1e1e;
+  color: white;
+}
+
 /* hide scrollbar for IE, Edge and Firefox */
 * {
   scrollbar-width: none; /* Firefox */
